Assignment_4-Kubernetes-Extending/webhooks/webhook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: custom-label-injector
  labels:
    app: custom-label-injector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  namespace: custom-label-injector
  labels:
    app: custom-label-injector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-label-injector
  template:
    metadata:
      labels:
        app: custom-label-injector
    spec:
      containers:
      - image: epap011/webhook-controller:latest
        name: controller
        ports:
        - containerPort: 8000
          name: http
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: controller
  namespace: custom-label-injector
  labels:
    app: custom-label-injector
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      name: http
  selector:
    app: custom-label-injector
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: custom-label-injector
  namespace: custom-label-injector
  labels:
    app: custom-label-injector
webhooks:
  - name: controller.custom-label-injector.svc
    clientConfig:
      service:
        name: controller
        namespace: custom-label-injector
        path: "/mutate"
        port: 80
    rules:
      - operations: ["CREATE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["pods", "deployments"]
    namespaceSelector:
      matchLabels:
        custom-label-injector: enabled
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    failurePolicy: Fail
